--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header .scroll-bar{
 .home{
     display: flex;
     align-items: center;
-    background:url(images/background.jpeg) no-repeat;
+    /*background:url(images/background.jpeg) no-repeat; */
     background-size: cover;
     background-position: center;
 }
